# ZncTwitchTMI

./: .gitignore  CMakeLists.txt  README  build.sh  jload.cpp  jload.h  twitchtmi.cpp  twitchtmi.h  twitchwhisp.cpp  twitchwhisp.h
cmake/Modules/: FindZNC.cmake
json/: jsoncpp.cpp
tmpl/: index.tmpl
